# Deep-Learning-Specialization

./: .gitignore  main.py  pyproject.toml
Course 1 - Neural Networks and Deep Learning/Week 2 - Neural Networks Basics/Assignment 1 - Python Basics with Numpy/: Python_Basics_with_Numpy.ipynb  Solution.ipynb  test_utils.py
Course 1 - Neural Networks and Deep Learning/Week 2 - Neural Networks Basics/Assignment 2 - Logistic Regression with a Neural Network Mindset/: public_tests.py
Course 1 - Neural Networks and Deep Learning/Week 2/Assignment 1 - Python Basics with Numpy/: public_tests.py
Course 1 - Neural Networks and Deep Learning/Week 2/Assignment 2 - Logistic Regression with a Neural Network Mindset/: Logistic_Regression_with_a_Neural_Network_mindset.ipynb  Solution.ipynb
Course 1 - Neural Networks and Deep Learning/Week 3 - Shallow Neural Networks/Assignment 1 - Planar Data Classification with One Hidden Layer/: testCases_v2.py  test_utils.py
Course 1 - Neural Networks and Deep Learning/Week 3/Assignment 1 - Planar Data Classification with One Hidden Layer/: Planar_data_classification_with_one_hidden_layer.ipynb  Solution.ipynb  public_tests.py
Course 1 - Neural Networks and Deep Learning/Week 4 - Deep Neural Networks/Assignment 1 - Building your Deep Neural Network: Step by Step/: Building_your_Deep_Neural_Network_Step_by_Step.ipynb  Solution.ipynb  public_tests.py
Course 1 - Neural Networks and Deep Learning/Week 4 - Deep Neural Networks/Assignment 2 - Deep Neural Network - Application/: Deep Neural Network - Application.ipynb  Solution.ipynb  (+2 more)
