[project]
name = "deep-learning-specialization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "black>=24.8.0",
    "h5py>=3.11.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.7.5",
    "numpy>=1.24.4",
    "scipy>=1.10.1",
]
